docs/components/sass/components/_accordion.scss
@use '../abstracts/variables' as *;
// --8<-- [start:accordion-desktop]
.accordion.-desktop{
  border: none;
  border-radius: 0;
  border-bottom: .125rem solid $color-primary;
  padding: 0;
  height: 5.5rem;
  margin: 0;
  width: 32rem;
  background-color: transparent;
  gap: 1rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: start;
  box-sizing: border-box;
  
  &[open] {
    height: 17rem;
    box-shadow: none;
  }
}
.accordion[open] > .summary {
  
  .icon.-open {
    display: block;
  }
  .icon.-close {
    display: none;
  }
}
.accordion:not([open]) > .summary {
  .icon.-open {
    display: none;
  }
  .icon.-close {
    display: block;
  }
}

.accordion.-desktop > .summary {
  background-color: transparent;
  padding: 1.5rem 1.25rem 0 1.25rem;
  gap: 1.25rem;
  width: 32rem;
  min-height: 4rem;
  display: flex;
  align-items: center;
  flex-direction: row;
  justify-content: space-between;
  box-sizing: border-box;

  &> .title {
    margin: 0;
    width: 25.75rem;
    height: 2.5rem;
    font-family: 'Roboto Semibold', sans-serif;
    font-size: 1.25rem;
    font-weight: 600;
    line-height: 130%;
    
  }
  &> .icon {
    --md-icon-size: 2.5rem;
    height: 2.5rem;
    color: $color-primary;
  }
  &::before, &::after, &::marker {
    content: none;
    list-style: none;
  }
  
}
.accordion > .description {
  font-size: 1rem;
  line-height: 150%;
  font-family: 'Robot Regular', sans-serif;
  font-weight: 400;
  padding: 0;
  width: 29.5rem;
}
// --8<-- [end:accordion-desktop]
// --8<-- [start:accordion-mobile]
.accordion.-mobile{
  border: none;
  border-radius: 0;
  border-bottom: .125rem solid $color-primary;
  padding: 0;
  height: 3.75rem;
  margin: 0;
  width: 17.5rem;
  background-color: transparent;
  gap: 1rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: start;
  box-sizing: border-box;
  
  &[open] {
    height: 25.5rem;
    box-shadow: none;
  }
}
.accordion[open] > .summary {
  
  .icon.-open {
    display: block;
  }
  .icon.-close {
    display: none;
  }
}
.accordion:not([open]) > .summary {
  .icon.-open {
    display: none;
  }
  .icon.-close {
    display: block;
  }
}

.accordion.-mobile > .summary {
  background-color: transparent;
  padding: 1rem 0.75rem 0 0.75rem;
  gap: 1.25rem;
  width: 17.5rem;
  min-height: 1.75rem;
  display: flex;
  align-items: center;
  flex-direction: row;
  justify-content: space-between;
  box-sizing: border-box;

  &> .title {
    margin: 0;
    width: 13.25rem;
    height: 1.75rem;
    font-family: 'Roboto Semibold', sans-serif;
    font-size: 1.25rem;
    font-weight: 600;
    line-height: 135%;
    
  }
  &> .icon {
    --md-icon-size: 1.25rem;
    height: 1.5rem;
    color: $color-primary;
  }
  &::before, &::after, &::marker {
    content: none;
    list-style: none;
  }
  
}
.accordion > .description {
  font-size: 1rem;
  line-height: 150%;
  font-family: 'Robot Regular', sans-serif;
  font-weight: 400;
  padding: 0;
  width: 16rem;
}
// --8<-- [end:accordion-mobile]

